// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TeamSettings hide invite code if no permissions for team inviting 1`] = `
<ModalSection
  content={
    <React.Fragment>
      <div
        className="modal-header"
      >
        <button
          className="close"
          data-dismiss="modal"
          id="closeButton"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <h4
          className="modal-title"
        >
          <div
            className="modal-back"
          >
            <i
              aria-label="Collapes Icon"
              className="fa fa-angle-left"
              onClick={[Function]}
            />
          </div>
          <span>
            Team Settings
          </span>
        </h4>
      </div>
      <div
        className="modal-info-tab-content user-settings"
      >
        <div
          className="name-description-container"
        >
          <TeamNameSection
            handleNameChanges={[Function]}
            name="name"
          />
          <TeamDescriptionSection
            description=""
            handleDescriptionChanges={[Function]}
          />
        </div>
        <TeamPictureSection
          disabled={false}
          onFileChange={[Function]}
          onRemove={[Function]}
          team={
            Object {
              "allow_open_invite": false,
              "allowed_domains": "",
              "company_name": "",
              "create_at": 0,
              "delete_at": 0,
              "description": "",
              "display_name": "name",
              "email": "",
              "group_constrained": false,
              "id": "team_id",
              "invite_id": "",
              "name": "DN",
              "scheme_id": "id",
              "type": "O",
              "update_at": 0,
            }
          }
          teamName="name"
        />
        <SaveChangesPanel
          handleCancel={[Function]}
          handleClose={[Function]}
          handleSubmit={[Function]}
          state="saving"
          tabChangeError={false}
        />
      </div>
    </React.Fragment>
  }
/>
`;

exports[`components/TeamSettings hide invite code if no permissions for team inviting 2`] = `
<ModalSection
  content={
    <React.Fragment>
      <div
        className="modal-header"
      >
        <button
          className="close"
          data-dismiss="modal"
          id="closeButton"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <h4
          className="modal-title"
        >
          <div
            className="modal-back"
          >
            <i
              aria-label="Collapes Icon"
              className="fa fa-angle-left"
              onClick={[Function]}
            />
          </div>
          <span>
            Team Settings
          </span>
        </h4>
      </div>
      <div
        className="modal-info-tab-content user-settings"
      >
        <div
          className="name-description-container"
        >
          <TeamNameSection
            handleNameChanges={[Function]}
            name="name"
          />
          <TeamDescriptionSection
            description=""
            handleDescriptionChanges={[Function]}
          />
        </div>
        <TeamPictureSection
          disabled={false}
          onFileChange={[Function]}
          onRemove={[Function]}
          team={
            Object {
              "allow_open_invite": false,
              "allowed_domains": "",
              "company_name": "",
              "create_at": 0,
              "delete_at": 0,
              "description": "",
              "display_name": "name",
              "email": "",
              "group_constrained": false,
              "id": "team_id",
              "invite_id": "",
              "name": "DN",
              "scheme_id": "id",
              "type": "O",
              "update_at": 0,
            }
          }
          teamName="name"
        />
        <SaveChangesPanel
          handleCancel={[Function]}
          handleClose={[Function]}
          handleSubmit={[Function]}
          state="saving"
          tabChangeError={false}
        />
      </div>
    </React.Fragment>
  }
/>
`;

exports[`components/TeamSettings should match snapshot when team is group constrained 1`] = `
<ModalSection
  content={
    <React.Fragment>
      <div
        className="modal-header"
      >
        <button
          className="close"
          data-dismiss="modal"
          id="closeButton"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
        <h4
          className="modal-title"
        >
          <div
            className="modal-back"
          >
            <i
              aria-label="Collapes Icon"
              className="fa fa-angle-left"
              onClick={[Function]}
            />
          </div>
          <span>
            Team Settings
          </span>
        </h4>
      </div>
      <div
        className="modal-info-tab-content user-settings"
      >
        <div
          className="name-description-container"
        >
          <TeamNameSection
            handleNameChanges={[Function]}
            name="TestTeam"
          />
          <TeamDescriptionSection
            description=""
            handleDescriptionChanges={[Function]}
          />
        </div>
        <TeamPictureSection
          disabled={false}
          onFileChange={[Function]}
          onRemove={[Function]}
          team={
            Object {
              "allow_open_invite": false,
              "allowed_domains": "",
              "company_name": "",
              "create_at": 0,
              "delete_at": 0,
              "description": "",
              "display_name": "TestTeam",
              "email": "",
              "group_constrained": true,
              "id": "team_id",
              "invite_id": "",
              "name": "DN",
              "scheme_id": "id",
              "type": "O",
              "update_at": 0,
            }
          }
          teamName="TestTeam"
        />
        <SaveChangesPanel
          handleCancel={[Function]}
          handleClose={[Function]}
          handleSubmit={[Function]}
          state="saving"
          tabChangeError={false}
        />
      </div>
    </React.Fragment>
  }
/>
`;
